[package]
name = "sqlib"
version = "0.2.6"
authors = ["Florian Kahllund <flo.kahllund@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/crackdog/sqlib"
description = """
A small TS3 Server Query library and channellist server
"""

[dependencies]
rustc-serialize = ">=0.3.19"
